--- a/delivery/Templates/success.html
+++ b/delivery/Templates/success.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome, {{ user.username }}!</h1>
     <p>You have successfully signed in.</p>
+    <a href="/open_add_restaurant">Add New Restaurant</a>
 </body>
 </html>
